--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "es6",
-    "types": ["jest", "node"]
+    "module": "UMD",
+    "types": ["jest", "node"],
+    "alwaysStrict": true,
   },
   "include": [
       "src/ts/**/*"
