--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "UMD",
+    "module": "commonjs",
     "types": ["jest", "node"],
     "alwaysStrict": true,
   },
