--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@cedric-demongivert/gl-tool-collection",
   "version": "0.11.0",
   "description": "A collection library for the gl-tool suit.",
-  "main": "index.js",
+  "main": "./index.js",
+  "types": "./types/index.d.ts",
   "browserslist": "> 0.25%, not dead",
   "scripts": {
     "test": "jest --coverage",
