--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "module": "commonjs",
     "types": ["jest", "node"],
     "alwaysStrict": true,
+    "moduleResolution": "node",
+    "declaration": true,
+    "declarationDir": "./dist/types"
   },
   "include": [
       "src/ts/**/*"
