--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@cedric-demongivert/gl-tool-collection",
   "version": "0.11.1",
   "description": "A collection library for the gl-tool suit.",
-  "main": "./index.js",
+  "main": "./src/index.js",
   "types": "./types/index.d.ts",
   "browserslist": "> 0.25%, not dead",
   "scripts": {
     "test": "jest --coverage",
-    "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && tsc --project .",
     "preversion": "npm install && npm test",
     "version": "npm run build && git add --all",
     "postversion": "git push && git push --tags"
