--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "alwaysStrict": true,
     "moduleResolution": "node",
     "declaration": true,
-    "declarationDir": "./dist/types"
+    "declarationDir": "./dist/types",
+    "outDir": "./dist/src"
   },
   "include": [
       "src/ts/**/*"
