--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@cedric-demongivert/gl-tool-collection",
   "version": "0.12.0",
   "description": "A collection library for the gl-tool suit.",
-  "main": "./src/index.js",
+  "main": "./index.js",
   "types": "./types/index.d.ts",
   "browserslist": "> 0.25%, not dead",
   "scripts": {
     "test": "jest --coverage",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && tsc --project .",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "preversion": "npm install && npm test",
     "version": "npm run build && git add --all",
     "postversion": "git push && git push --tags"
@@ -28,5 +28,6 @@
     "typedoc-webpack-plugin": "^1.1.4",
     "webpack": "^4.33.0"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
