--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "outDir": "./dist/src"
   },
   "include": [
-      "src/ts/**/*"
+      "src/**/*"
   ],
   "exclude": [
       "node_modules",
