--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "types": ["jest", "node"],
     "alwaysStrict": true,
     "moduleResolution": "node",
+    "downlevelIteration": true,
     "declaration": true,
     "declarationDir": "./dist/types",
     "outDir": "./dist/src",
