--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
   "devDependencies": {
     "@types/jest": "^24.0.12",
     "@types/node": "^12.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "cross-env": "^5.2.0",
+    "eslint": "^8.15.0",
     "jest": "^24.7.1",
     "laravel-mix": "^5.0.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.2",
     "typedoc": "^0.14.2",
     "typedoc-webpack-plugin": "^1.1.4",
+    "typescript": "^4.6.4",
     "webpack": "^4.33.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@cedric-demongivert/gl-tool-utils": "^0.0.5"
+  }
 }
