--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,22 @@
-node_modules/
-npm-debug.log
-doc/
-coverage/
-npm-debug.log
-yarn-error.log
+# Ignore everything.
+*
+
+# Except sources.
+!src/**
+
+# Except tests.
+!tests/**
+
+# Except configuration files.
+!.babelrc
+!.gitignore
+!.npmingore
+!jest.config.js
+!package.json
+!tsconfig.json
+!webpack.mix.js
+!.eslintrc.js
+
+# Except content.
+!LICENSE.md
+!README.md
