--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "downlevelIteration": true,
     "declaration": true,
     "declarationDir": "./dist/types",
-    "outDir": "./dist/src"
+    "outDir": "./dist/src",
+    "experimentalDecorators": true
   },
   "include": [
       "src/**/*"
