--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,18 @@
     "moduleResolution": "node",
     "downlevelIteration": true,
     "declaration": true,
-    "declarationDir": "./dist/types",
-    "outDir": "./dist/src",
+    "declarationDir": "./distribution/types",
+    "outDir": "./distribution/sources",
     "experimentalDecorators": true
   },
+  "typedocOptions": {
+    "entryPoints": [ "./sources" ],
+    "out": "./distribution/documentation",
+    "readme": "none",
+    "excludePrivate": true
+  },
   "include": [
-      "src/**/*"
+      "sources/index.ts"
   ],
   "exclude": [
       "node_modules",
