--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack": "^4.33.0"
   },
   "dependencies": {
-    "@cedric-demongivert/gl-tool-utils": "^0.0.6"
+    "@cedric-demongivert/gl-tool-utils": "^0.0.7",
+    "chalk": "^4.1.2"
   }
 }
