--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@types/jest": "^24.0.12",
-    "@types/node": "^12.0.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.36",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
-    "cross-env": "^5.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
-    "jest": "^24.7.1",
-    "laravel-mix": "^5.0.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.2",
+    "jest": "^28.1.0",
+    "laravel-mix": "^6.0.43",
+    "npx": "^10.2.2",
+    "ts-jest": "^28.0.3",
+    "ts-loader": "^9.3.0",
     "typedoc": "^0.22.15",
-    "typescript": "^4.6.4",
-    "webpack": "^4.33.0"
+    "typescript": "^4.7.2",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "@cedric-demongivert/gl-tool-utils": "^0.0.7",
