--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "module": "es6",
     "types": ["jest", "node"],
     "alwaysStrict": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
     "moduleResolution": "node",
     "downlevelIteration": true,
     "declaration": true,
